🎓 Ajout option d'approfondissement Cloud avec Orange Business & Capgemini
🌟 Nouvelle spécialisation:
- Partenariat prestigieux Orange Business Services
- Collaboration avec Capgemini
- Formation en architecture cloud avancée
- Focus transformation digitale entreprise

🎨 Design spécialisé:
- Carte avec dégradé Orange/Capgemini/ECE
- Badges partenaires avec couleurs corporate
- Effets hover pour interactivité
- Barre colorée en en-tête

🏢 Compétences acquises:
- Architecture Cloud
- Transformation Digitale
- Solutions Entreprise
- Cloud hybride

✨ Valeur ajoutée:
- Crédibilité renforcée par partenariats
- Expertise reconnue par leaders du secteur
- Formation pratique en entreprise
- Vision complète écosystème cloud

--- a/index.html
+++ b/index.html
@@ -524,6 +524,42 @@
                     </div>
                 </div>
 
+                <div class="education-card specialization-card">
+                    <div class="education-header">
+                        <div class="education-logo">
+                            <i class="fas fa-cloud"></i>
+                        </div>
+                        <div class="education-info">
+                            <h3>Option d'Approfondissement</h3>
+                            <h4>Spécialisation Cloud</h4>
+                            <div class="education-school">
+                                <span class="partner-logo orange">Orange Business</span> & 
+                                <span class="partner-logo capgemini">Capgemini</span>
+                            </div>
+                            <div class="education-date">Pendant le cursus ingénieur</div>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <p>Formation spécialisée en partenariat avec <strong>Orange Business Services</strong> et <strong>Capgemini</strong>, axée sur les architectures cloud avancées, les solutions d'entreprise et les stratégies de transformation digitale.</p>
+                        <div class="education-skills">
+                            <span class="skill-badge cloud">Architecture Cloud</span>
+                            <span class="skill-badge cloud">Transformation Digitale</span>
+                            <span class="skill-badge cloud">Solutions Entreprise</span>
+                            <span class="skill-badge cloud">Cloud hybride</span>
+                        </div>
+                        <div class="partnership-badges">
+                            <div class="partner-badge orange-badge">
+                                <i class="fas fa-building"></i>
+                                <span>Orange Business</span>
+                            </div>
+                            <div class="partner-badge capgemini-badge">
+                                <i class="fas fa-handshake"></i>
+                                <span>Capgemini</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="education-card">
                     <div class="education-header">
                         <div class="education-logo">
