☁️ Expertise Multi-Cloud complète - AWS, GCP & Azure
🌟 Formation enrichie:
- Étude comparative complète des 3 géants du cloud
- AWS Services (tous les services passés en revue)
- Google Cloud Platform (GCP) - analyse exhaustive
- Microsoft Azure - étude approfondie
- Stratégie Multi-Cloud maîtrisée

🎨 Nouveaux badges cloud providers:
- Badge AWS avec couleurs officielles (#ff9900)
- Badge GCP avec gradient Google (#4285f4)
- Badge Azure avec bleu Microsoft (#0078d4)
- Effets hover interactifs
- Icônes Font Awesome officielles

🏆 Compétences ajoutées:
- Multi-Cloud Strategy
- Comparaison inter-plateformes
- Architecture hybride
- Expertise transversale

💼 Valeur pour recruteurs:
- Polyvalence cloud démontrée
- Expertise pas limitée à un seul fournisseur
- Vision complète de l'écosystème cloud
- Capacité de conseil stratégique

--- a/index.html
+++ b/index.html
@@ -494,12 +494,28 @@
                         </div>
                     </div>
                     <div class="education-content">
-                        <p>Formation spécialisée en partenariat avec <strong>Orange Business Services</strong> et <strong>Capgemini</strong>, axée sur les architectures cloud avancées, les solutions d'entreprise et les stratégies de transformation digitale.</p>
+                        <p>Formation spécialisée en partenariat avec <strong>Orange Business Services</strong> et <strong>Capgemini</strong>, axée sur les architectures cloud avancées et les stratégies de transformation digitale. <strong>Étude comparative complète de tous les services cloud</strong> proposés par <strong>AWS</strong>, <strong>Google Cloud Platform (GCP)</strong> et <strong>Microsoft Azure</strong>.</p>
                         <div class="education-skills">
+                            <span class="skill-badge cloud">AWS Services</span>
+                            <span class="skill-badge cloud">Google Cloud (GCP)</span>
+                            <span class="skill-badge cloud">Microsoft Azure</span>
+                            <span class="skill-badge cloud">Multi-Cloud Strategy</span>
                             <span class="skill-badge cloud">Architecture Cloud</span>
                             <span class="skill-badge cloud">Transformation Digitale</span>
-                            <span class="skill-badge cloud">Solutions Entreprise</span>
-                            <span class="skill-badge cloud">Cloud hybride</span>
+                        </div>
+                        <div class="cloud-providers">
+                            <div class="cloud-provider aws-provider">
+                                <i class="fab fa-aws"></i>
+                                <span>AWS</span>
+                            </div>
+                            <div class="cloud-provider gcp-provider">
+                                <i class="fab fa-google"></i>
+                                <span>GCP</span>
+                            </div>
+                            <div class="cloud-provider azure-provider">
+                                <i class="fab fa-microsoft"></i>
+                                <span>Azure</span>
+                            </div>
                         </div>
                         <div class="partnership-badges">
                             <div class="partner-badge orange-badge">
