📊 Ajout compteur de visiteurs + Nettoyage script CV
🔢 Compteur de visiteurs intelligent:
- Visites totales (localStorage persistant)
- Visiteurs uniques (détection session)
- Visites journalières (reset quotidien)
- Animations et transitions fluides

🎨 Interface élégante:
- Position fixe coin inférieur gauche
- Design glassmorphism avec backdrop-filter
- Icônes émojis pour clarté visuelle
- Responsive mobile adaptatif

🧹 Nettoyage technique:
- Suppression référence html2pdf.js (CV retiré)
- Code optimisé et structuré
- Gestion locale sans dépendance externe
- Formatage français des nombres

📱 Responsive design:
- Tablet: Position latérale compacte
- Mobile: Layout horizontal optimisé
- Animations et hover effects
- Zone tactile mobile friendly

✅ Fonctionnalités:
- Comptage en temps réel
- Persistance des données
- Animation d'entrée progressive
- Pas de dépendance serveur

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,33 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <!-- Compteur de visiteurs -->
+    <div class="visitor-counter" id="visitor-counter">
+        <div class="counter-container">
+            <div class="counter-item">
+                <span class="counter-icon">👥</span>
+                <div class="counter-details">
+                    <span class="counter-number" id="total-visits">0</span>
+                    <span class="counter-label">Visites totales</span>
+                </div>
+            </div>
+            <div class="counter-item">
+                <span class="counter-icon">🌟</span>
+                <div class="counter-details">
+                    <span class="counter-number" id="unique-visits">0</span>
+                    <span class="counter-label">Visiteurs uniques</span>
+                </div>
+            </div>
+            <div class="counter-item">
+                <span class="counter-icon">📊</span>
+                <div class="counter-details">
+                    <span class="counter-number" id="today-visits">0</span>
+                    <span class="counter-label">Aujourd'hui</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
